appId: com.mangonw.gganbu
---
- extendedWaitUntil:
    visible:
      id: 'get-started-button'
    timeout: 30000
- tapOn:
    id: 'get-started-button'
- waitForAnimationToEnd
- tapOn:
    id: 'email-toggle'
- tapOn:
    id: 'email-input'
- inputText: 'winddew71@gmail.com'
- tapOn:
    id: 'password-input'
- inputText: 'pa20040803^^'
- tapOn:
    id: 'login-button'
- extendedWaitUntil:
    visible:
      text: 'Good morning'
    timeout: 15000
